feat: Create mileage-tracker crud APIs
